Fix RTL Layout Issues Across Entire Website

--- a/src/index.css
+++ b/src/index.css
@@ -114,13 +114,21 @@
     text-align: right;
   }
 
+  [dir="rtl"] * {
+    text-align: inherit;
+  }
+
   [dir="rtl"] .nav-link::after {
     right: auto;
     left: 0;
   }
 
-  [dir="rtl"] .flex {
-    flex-direction: row-reverse;
+  [dir="rtl"] .flex:not(.flex-col):not(.flex-col-reverse) {
+    flex-direction: row-reverse !important;
+  }
+
+  [dir="rtl"] .grid {
+    direction: rtl;
   }
 
   [dir="rtl"] .ml-2 {
@@ -153,6 +161,66 @@
     margin-left: 1rem;
   }
 
+  [dir="rtl"] .ml-6 {
+    margin-left: 0;
+    margin-right: 1.5rem;
+  }
+
+  [dir="rtl"] .mr-6 {
+    margin-right: 0;
+    margin-left: 1.5rem;
+  }
+
+  [dir="rtl"] .ml-8 {
+    margin-left: 0;
+    margin-right: 2rem;
+  }
+
+  [dir="rtl"] .mr-8 {
+    margin-right: 0;
+    margin-left: 2rem;
+  }
+
+  [dir="rtl"] .pl-2 {
+    padding-left: 0;
+    padding-right: 0.5rem;
+  }
+
+  [dir="rtl"] .pr-2 {
+    padding-right: 0;
+    padding-left: 0.5rem;
+  }
+
+  [dir="rtl"] .pl-4 {
+    padding-left: 0;
+    padding-right: 1rem;
+  }
+
+  [dir="rtl"] .pr-4 {
+    padding-right: 0;
+    padding-left: 1rem;
+  }
+
+  [dir="rtl"] .pl-6 {
+    padding-left: 0;
+    padding-right: 1.5rem;
+  }
+
+  [dir="rtl"] .pr-6 {
+    padding-right: 0;
+    padding-left: 1.5rem;
+  }
+
+  [dir="rtl"] .pl-8 {
+    padding-left: 0;
+    padding-right: 2rem;
+  }
+
+  [dir="rtl"] .pr-8 {
+    padding-right: 0;
+    padding-left: 2rem;
+  }
+
   [dir="rtl"] .text-left {
     text-align: right;
   }
@@ -161,9 +229,29 @@
     text-align: left;
   }
 
+  [dir="rtl"] .justify-start {
+    justify-content: flex-end;
+  }
+
+  [dir="rtl"] .justify-end {
+    justify-content: flex-start;
+  }
+
+  [dir="rtl"] .items-start {
+    align-items: flex-end;
+  }
+
+  [dir="rtl"] .items-end {
+    align-items: flex-start;
+  }
+
   /* Arabic font optimization */
   [dir="rtl"] body {
-    font-family: 'Segoe UI', Tahoma, Arial, Helvetica, sans-serif;
+    font-family: 'Segoe UI', 'Tahoma', 'Arial', 'Helvetica', sans-serif;
+  }
+
+  [dir="rtl"] .font-display {
+    font-family: 'Segoe UI', 'Tahoma', 'Arial', 'Helvetica', sans-serif;
   }
 
   /* Smooth scrolling */
